test/sematest/invalid/invalid_cast3.java


class Bar {
  public int a;
}

class Foo {
  public static void main(String[] args) {
    while (3) {

    }

    if (7) {

    }

    Bar[] bars = new Bar[true];
    Bar[] bars2 = new bar[1 + 3 + 2 + 5 != 9];
  }
}
